--- a/MemeMe1-0/Base.lproj/Main.storyboard
+++ b/MemeMe1-0/Base.lproj/Main.storyboard
@@ -24,9 +24,17 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UGq-yH-ePS">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem systemItem="action" id="1Ty-Fv-2vu" userLabel="Share Button"/>
+                                    <barButtonItem systemItem="action" id="1Ty-Fv-2vu" userLabel="Share Button">
+                                        <connections>
+                                            <action selector="shareAction:" destination="BYZ-38-t0r" id="C4R-Cc-h9V"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="ES6-F9-NQk"/>
-                                    <barButtonItem systemItem="cancel" id="Lh7-DH-Hed" userLabel="Cancel Button"/>
+                                    <barButtonItem systemItem="cancel" id="Lh7-DH-Hed" userLabel="Cancel Button">
+                                        <connections>
+                                            <action selector="cancelAction:" destination="BYZ-38-t0r" id="ytZ-kf-0n1"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mAu-Id-XaL">
